<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">51帮帮忙</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="app_copyright">CopyRight 2014 51帮帮忙</string>
    <string name="app_version">v%1s</string>

    <!-- update -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">残忍拒绝</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

    <!-- welcome login or reg -->
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_welcome_register_or_login">欢迎</string>
    <string name="title_activity_login_has_account">登录</string>
    <string name="btn_enter">立即体验</string>
    <string name="forget_password">忘记密码</string>
    <string name="to_register">注册账号>></string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="email">邮箱</string>
    <string name="input_account_hint">请输入账号</string>
    <string name="password">密码</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="login_toggle_password_show">显示</string>
    <string name="login_toggle_password_hide">隐藏</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="ok_button">确定</string>
    <string name="login_empty_account">账号不能为空</string>
    <string name="login_error_invalid_email">邮箱格式不正确</string>
    <string name="login_empty_password">密码不能为空</string>
    <string name="login_failure_other">登录失败</string>
    <string name="login_failure_auth">用户名或密码不正确</string>
    <string name="login_loading">正在登录...</string>
    <string name="sina_login">新浪微博登录</string>
    <string name="qq_login">QQ账号登录</string>
    <string name="user_info">用户信息</string>
    <string name="pet_info">宠物信息</string>
    <string name="nickname">姓名</string>
    <string name="input_nickname_hint">请输入姓名</string>
    <string name="empty_nickname">姓名不能为空</string>
    <string name="empty_phone">请输入11位手机号</string>
    <string name="changeAccount">切换账号</string>
    <string name="logining">正在登录....</string>
    <string name="skip_button">跳过</string>
    <string name="title_activity_user_profile">用户资料</string>
    <string name="home">首页</string>
    <string name="help">求助</string>
    <string name="discover">发现</string>
    <string name="me">我的</string>
    <string name="un_login_me"> 登录后，您的个人资料会显示在这里</string>
    <string name="un_login_home"> 登录后，您的可以看到与你相关的帮助信息</string>
    <string name="un_login_publish"> 登录后，您的可以发布您需要的帮助</string>
    <string name="title_activity_publish_sub_type">PublishSubTypeActivity</string>
    <string name="title_activity_publish">PublishActivity</string>
    <string name="title_activity_upload_largin_image">UploadLarginImageActivity</string>
    <string name="title_activity_user_edit">用户资料修改</string>
    <string name="title_activity_setting">系统设置</string>
    <string name="title_activity_change_pwd">修改密码</string>
    <string name="title_activity_city">城市</string>
    <string name="title_activity_message">消息中心</string>
    <string name="title_activity_type">分类列表</string>
    <string name="title_activity_seek">信息详情</string>
    <string name="title_activity_offer">帮助</string>
    <string name="title_activity_publish_offer">我要帮助</string>
    <string name="un_login_message"> 登录后，您可以查看未读的通知消息</string>
    <string name="title_activity_my_seek">我发布的信息</string>
    <string name="title_activity_delegation">帮助委托</string>
    <string name="title_activity_my_delegation">我参与的信息</string>
    <string name="title_activity_larger_image">查看大图</string>
    <string name="title_activity_user_info">用户信息</string>
    <string name="title_activity_evaluation">评价</string>
    <string name="un_login_setting">登录后，您的可以进行系统设置</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_province">ProvinceActivity</string>
    <string name="title_activity_district">DistrictActivity</string>
    <string name="title_activity_select_user_category">请选择用户特长</string>
    <string name="title_activity_locate">请选择你的位置</string>
    <string name="title_activity_my_evaluation">评价列表</string>
    <string name="title_activity_select_seek_type">SelectSeekTypeActivity</string>
    <string name="title_activity_select_address">选择地址</string>
    <string name="title_activity_approve">实名认证</string>
    <string name="title_activity_ad">AdActivity</string>
    <string name="title_activity_report">举报</string>
    <string name="un_login_report">登录后，您可以进行举报操作</string>
    <string name="title_activity_nearly">附近</string>
    <string name="title_activity_letter">LetterActivity</string>

</resources>
