
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white_color"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/app_name"
            android:layout_toRightOf="@+id/app_name"
            android:text="@string/app_version"
            android:textColor="@color/gray_color"
          	android:layout_marginBottom="3dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/base_color"
            android:textSize="36sp"
            android:textStyle="bold" />

    </RelativeLayout>

    
    <LinearLayout
         android:layout_marginTop="36dp"
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/app_title"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/setting_list_top_bg_white"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/account"
                android:textColor="@color/black_color"
                android:textSize="16sp" />

            <AutoCompleteTextView
                android:id="@+id/account"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1.0"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_account_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/hint_text_color"
                android:textSize="16sp"
                android:windowSoftInputMode="stateHidden" />
        </LinearLayout>

        <LinearLayout
           
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/setting_list_bottom_bg_white"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16sp"
                android:text="@string/password"
                android:textColor="@color/black_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_weight="1.0"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/hint_text_color"
                android:textSize="16sp"
                android:windowSoftInputMode="stateHidden" />

            <TextView
                android:id="@+id/login_toggle_password"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:background="@drawable/login_toggle_password_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/login_toggle_password_show"
                android:textColor="@color/black_color"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:layout_below="@+id/login_linearLayout"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_orange_shape"
        android:textColor="@color/white_color"
        android:textSize="24sp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button"
        android:layout_marginTop="32dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
         />

        <TextView
            android:id="@+id/to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:textSize="18dp"
            android:textColor="@color/gray_color"
            android:text="@string/to_register" />
        
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/login_bg" />

</RelativeLayout>