<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white_color"
    tools:context=".MainActivity" >
    
     <android.support.v4.view.ViewPager
          android:id="@+id/tabpager"
          android:layout_width="match_parent"
          android:layout_height="0dip"  
     		android:layout_weight="1"  >
        </android.support.v4.view.ViewPager>
       
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <include layout="@layout/line_horizontal_divider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:gravity="center"
        android:background="@color/tab_bg_color"
        android:layout_height="56dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:id="@+id/home_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" 
>

            <ImageView
                  android:id="@+id/home_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/tab_home_active" />

            <TextView
                android:id="@+id/home_text"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:textColor="@color/base_color"
                android:text="@string/home" />
            
        </LinearLayout>
<LinearLayout
                   android:id="@+id/local_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/local_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/tab_local_default" />

            <TextView
                  android:id="@+id/local_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                 android:textSize="12sp"
                 android:textColor="@color/tab_gray_color"
                android:text="附近" />
            
        </LinearLayout>
              <LinearLayout
                   android:id="@+id/publish_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/publish_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/tab_publish_default" />

            <TextView
                  android:id="@+id/publish_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                 android:textSize="12sp"
                 android:textColor="@color/tab_gray_color"
                android:text="发布" />
            
        </LinearLayout>        
        
        <LinearLayout
              android:id="@+id/discover_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
  			 android:layout_weight="1"
            android:orientation="vertical"
                        android:visibility="gone" >

            <ImageView
                 android:id="@+id/discover_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/tab_search_default" />

            <TextView
                 android:id="@+id/discover_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                android:textColor="@color/tab_gray_color"
                android:text="@string/discover" />
            
        </LinearLayout>        
        
        <LinearLayout
            android:id="@+id/me_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                 android:id="@+id/me_image"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/tab_me_default" />

            <TextView
                 android:id="@+id/me_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                 android:textSize="12sp"
                 android:textColor="@color/tab_gray_color"
                android:text="@string/me" />
            
        </LinearLayout>
    </LinearLayout>
    
 

 

</LinearLayout>